tests/compile_fail/011_byte_set_unknown_target.vox
Set byte 1 of missing to 65.
